.kubernetes/shared/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: shared
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
    - type: NamedAddress
      value: gateway-ip-address
  listeners:
    - name: http-root
      hostname: "dawidbladek0831.org"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
    - name: http
      hostname: "*.dawidbladek0831.org"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
    - name: http-dev
      hostname: "*.dev.dawidbladek0831.org"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
    - name: http-f19
      hostname: "*.f19.dawidbladek0831.org"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
    - name: http-f19-dev
      hostname: "*.f19.dev.dawidbladek0831.org"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"

    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: "dawidbladek0831.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: dawidbladek0831-org-cert-secret
            namespace: shared
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.dawidbladek0831.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: dawidbladek0831-org-cert-secret
            namespace: shared
    - name: https-dev
      protocol: HTTPS
      port: 443
      hostname: "*.dev.dawidbladek0831.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: dawidbladek0831-org-cert-secret
            namespace: shared
    - name: https-f19
      protocol: HTTPS
      port: 443
      hostname: "*.f19.dawidbladek0831.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: dawidbladek0831-org-cert-secret
            namespace: shared
    - name: https-f19-dev
      protocol: HTTPS
      port: 443
      hostname: "*.f19.dev.dawidbladek0831.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: dawidbladek0831-org-cert-secret
            namespace: shared
